# donnes_des_sous_theo

./: .coverage  pyproject.toml
.github/workflows/: python-publish.yml
src/donnes_des_sous_theo/: __init__.py  banque.py
tests/: test_banque.py
